@@ -23,7 +23,7 @@ class RubyExtensionBuilder
   requiredPackages['Grid'] = %w{ Adj Line Sort}
   requiredPackages['GridShape'] = %w{ Adj Line Grid }
   requiredPackages['GridMetric'] = %w{ Adj Line Grid GridShape GridMath }
-  requiredPackages['GridSwap'] = %w{ Adj Line Queue Grid GridMath GridShape GridMetric }
+  requiredPackages['GridSwap'] = %w{ Adj Line Plan Sort Queue Grid GridMath GridShape GridMetric }
   requiredPackages['GridCAD'] = %w{ Adj Line Grid GridMath GridShape GridMetric }
   requiredPackages['GridInsert'] = %w{ Adj Line Queue Grid GridMath GridShape GridMetric GridSwap GridCAD }
   requiredPackages['GridMPI'] = %w{ Adj Line Sort Queue Grid GridMath GridShape GridMetric GridCAD GridInsert GridSwap }
