@@ -11,6 +11,8 @@ RubyExtensionBuilder.new('GridSwap').build
 require 'test/unit'
 require 'Adj/Adj'
 require 'Line/Line'
+require 'Plan/Plan'
+require 'Sort/Sort'
 require 'Queue/Queue'
 require 'Grid/Grid'
 require 'GridMath/GridMath'
