@@ -1,3 +1,8 @@
+2005-07-18 15:30 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridswap.c (gridSwap) used plan to swap really bad cells
+	first, to try and get better meshes.
+
 2005-07-18 13:55 Mike Park  <mike.park@nasa.gov>
 
 	* src/grid.c (gridConnValue,gridSetConnValue) removed.
